<resources>
    <string name="app_name">Swoosh</string>
    <string name="background_image">background image</string>
    <string name="app_logo">App Logo</string>
    <string name="desired_league">Desired League</string>
    <string name="mens">Mens</string>
    <string name="womens">Womens</string>
    <string name="co_ed">Co-Ed</string>
    <string name="next">NEXT</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="find_the_team_in_your_city_and_dominate_the_league">Find the team in your city, and dominate the league</string>
    <string name="get_started">GET STARTED</string>
    <string name="previous_page">Previous Page</string>
    <string name="i_m_a">I\'m a:</string>
    <string name="begginer">BEGGINER</string>
    <string name="baller">BALLER</string>
    <string name="finish">Finish</string>
    <string name="search_league">Looking for a co-ed beginner league near you...</string>
    <string name="todo">TODO</string>
    <string name="textview">TextView</string>
    <string name="sth123">todo</string>
    <string name="znajd_dru_yn_w_swoim_mie_cie_i_wygraj">Znajdź drużynę w swoim mieście i wygraj!</string>
    <string name="m_czy_ni">mężczyźni</string>
    <string name="wybierz_swoj_dru_yn">Wybierz swoją drużynę</string>
    <string name="kobiety">Kobiety</string>
    <string name="koedukacyna">KOEDUKACYNA</string>
    <string name="dalej">DALEJ</string>
    <string name="zaczynamy">ZACZYNAMY!</string>
    <string name="wyszukaj">WYSZUKAJ</string>
    <string name="pocz_tkuj_cy">początkujący</string>
    <string name="poziom_umiej_tno_ci">Poziom umiejętności</string>
    <string name="zaawansowany">Zaawansowany</string>
</resources>